<resources>
    <!--Fragments nomes-->
    <string name="app_name">MyGram</string>
    <string name="edit_profile_fragment">Editar Profil</string>
    <string name="view_post_fragment">View Post</string>
    <string name="profile_fragment">Profile</string>
    <string name="messages_fragment">Messages</string>
    <string name="view_comments_fragment">View Comments</string>
    <string name="view_profile_fragment">ViewProfile</string>

    <!--Dialog Names-->
    <string name="confirm_password_dialog">ConfirmPasswordDialog</string>


    <!--FireBase mensagens-->
    <string name="sign_out_fragment">Sair</string>
    <string name="auth_failed">O Login não foi completado com sucesso</string>


    <!--Campos da database do FireBase-->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="field_username">username</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <string name="field_user_id">user_id</string>
    <string name="field_likes">likes</string>
    <string name="field_caption">caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>
    <string name="field_comments">comments</string>


    <!--//photo types-->
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>

    <!--Bundle-->
    <string name="activity_number">activity_number</string>
    <string name="bundle_photo">bundle_photo</string>
    <string name="bundle_user_account_settings">bundle_user_account_settings</string>





    <!--Intent Extras-->
    <string name="calling_activity">calling_activity</string>
    <string name="select_image">select_image</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="select_bitmap">select_bitmap</string>
    <string name="intent_user">intent_user</string>


    <!--Activity Names-->
    <string name="profile_activity">Profile Activity</string>
    <string name="search_activity">Search Activity</string>
    <string name="home_activity">Home Activity</string>


    <!--FRAGMENTS  SHARE ACTIVITY-->
    <string name="gallery">GALERIA</string>
    <string name="photo">FOTO</string>
    <string name="string_open_camera">ABRIR CAMARA</string>
    <string name="string_next">Seguinte</string>
    <string name="string_share">Partilhar</string>
    <string name="message_on_sign_out">Tens a certeza que queres terminar a sessão</string>
    <string name="text_button_sign_out">Terminar sessão</string>
    <string name="textview_message_progress_bar">Terminar sessão......</string>
    <string name="confirm_password">Confirmar Password</string>
    <string name="cancel">CANCELAR</string>
    <string name="confirm">CONFIRMAR</string>
    <string name="hint_photo_description">Escreve uma legenda... </string>

    <!--TOAST-->
    <string name="toast_update_new_photo">Carregar nova foto</string>
    <string name="sucess_message_up_photo">Carregamento da foto foi com sucesso!</string>
    <string name="fail_upload_photo">Carregamento da Foto falhou</string>
    <string name="upload_photo_process">Processo de carregamento em </string>
    <string name="change_foto">Alterar Foto</string>
    <string name="hint_username">Nome</string>
    <string name="desplay_name">Nome do Utilizador</string>
    <string name="website">Site</string>
    <string name="description">Biografia</string>
    <string name="phone_number">Numero de Telemovel</string>
    <string name="private_information">Informação Privada</string>
    <string name="edit_profile">Edita o teu perfil</string>
    <string name="posts">Publicações</string>
    <string name="followers">Seguidores</string>
    <string name="fallowing">A seguir</string>
    <string name="account_settings">Configurações da conta</string>
    <string name="photo_top_post_toolbar">Foto</string>
    <string name="search">Procurar</string>
    <string name="time_days_ago">DIAS ATRÁS</string>
    <string name="time_today">HOJE</string>
    <string name="liked_by">Gostado por</string>
    <string name="and">e</string>
    <string name="others">outros</string>
    <string name="view_all_commens_number">Ver os</string>
    <string name="view_all_commens_number_1">Ver o comentario</string>
    <string name="comments_number" >comentarios </string>
    <string name="follow_view_profile">Seguir</string>
    <string name="unfollow_view_profile">Deixar de seguir</string>
    <string name="fallowing_view_profile">A seguir</string>
    <string name="followers_view_profile">Seguidores</string>
    <string name="posts_view_profile">Publicações</string>
    <string name="comments">Comentários</string>
    <string name="please_wait">Espere.......</string>
    <string name="password_hint_login">Palavra-passe</string>
    <string name="email_hint_login">Email</string>
    <string name="tv_login_create_new_account">Ainda não tem conta? Registra-se</string>
    <string name="tv_resgister_new_account">CRIAR NOVA CONTA</string>
    <string name="full_name_register">Nome completo</string>
    <string name="password_register_hint">Palavra-passe</string>
    <string name="bt_register">Registrar</string>
    <string name="bt_login">Iniciar sessão</string>
    <string name="add_comment_">Adiciona um comentário...</string>
    <string name="toast_register_empty_fields">Todos os campos tem de ser preenchidos</string>
    <string name="toast_register_send_email">Registro completo, Enviando Email de verificação</string>
    <string name="toast_login_fields_empty">Tens de preencher todos os campos</string>
    <string name="toast_login_email_verification">Tens que verificar o email</string>
    <string name="comment_field_empty">Tens de escrever!</string>
</resources>
