<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="55dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:src="@drawable/mygram"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint_login"
                android:id="@+id/input_email"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_hint_login"
                android:id="@+id/input_password"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/bt_login"
            android:id="@+id/btn_login"
            android:padding="12dp"
            android:background="@drawable/white_rounded_button"/>


        <TextView
            android:id="@+id/link_sigup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/tv_login_create_new_account"
            android:textColor="@color/link_blue"
            android:gravity="center"
            android:textSize="16dp"/>



    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"/>


    <TextView
        android:id="@+id/pleaseWait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_wait"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_alignBottom="@id/progressBar"
        android:layout_alignLeft="@id/progressBar"
        android:layout_alignRight="@id/progressBar"
        />




</RelativeLayout>