<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp">

        <TextView
            android:gravity="center"
            android:textAlignment="center"
            android:id="@+id/tvConfirmSignout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_on_sign_out"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnConfirmSignout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvConfirmSignout"
            android:layout_centerHorizontal="true"
            android:text="@string/text_button_sign_out"
            android:textSize="20sp"
            android:background="@drawable/white_rounded_button"
            android:layout_marginTop="20dp"/>


    </RelativeLayout>

    <ProgressBar
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:id="@+id/progressBar"/>


    <TextView
        android:id="@+id/tvSigningOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_message_progress_bar"
        android:textSize="20dp"
        android:layout_alignBottom="@+id/progressBar"
        android:layout_alignRight="@+id/progressBar"
        android:layout_alignLeft="@+id/progressBar"
        android:textColor="@color/black"/>


</RelativeLayout>