<merge xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">


        <TextView
            android:id="@+id/tvPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/textPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posts"
            android:textSize="12sp"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tvPosts"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tvFallowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintRight_toLeftOf="@+id/tvFolowing"
            android:layout_marginRight="8dp"
            app:layout_constraintLeft_toRightOf="@+id/tvPosts"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.48" />

        <TextView
            android:id="@+id/textFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textSize="12sp"
            android:layout_marginTop="-6dp"
            app:layout_constraintTop_toBottomOf="@+id/tvFallowers"
            app:layout_constraintRight_toLeftOf="@+id/textFolowing"
            android:layout_marginRight="8dp"
            app:layout_constraintLeft_toRightOf="@+id/textPosts"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.545" />

        <TextView
            android:id="@+id/tvFolowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textFolowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            android:text="@string/fallowing"
            android:textSize="12sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFolowing" />

        <TextView
            android:textSize="14sp"
            android:background="@drawable/grey_border"
            android:textAlignment="center"
            android:id="@+id/textEditProfile"
            android:layout_width="156dp"
            android:layout_height="18dp"
            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textFollowers"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.029" />
    </android.support.constraint.ConstraintLayout>


</merge>